# mpi-ruby

./: .gitignore  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  README  Rakefile  VERSION  aclocal.m4  config.h.in  configure  configure.in  index.html  mkinstalldirs
docs/: MPI  Makefile.am  Makefile.in
docs/html/: Makefile.am  Makefile.in  index.html  mpi.html  mpi_comm.html  mpi_exception.html  mpi_group.html  mpi_keyval.html  mpi_op.html  mpi_request.html  mpi_status.html
docs/man/: Makefile.am  Makefile.in
docs/man/man1/: Makefile  Makefile.am  Makefile.in  mpi_ruby.1
docs/man/man3/: MPI_Comm.3  MPI_Exception.3  MPI_Group.3  MPI_Keyval.3  MPI_Op.3  MPI_Request.3  MPI_Ruby.3  MPI_Status.3  Makefile  Makefile.am  Makefile.in
docs/rd/: Makefile.am  Makefile.in  mpi.rd  mpi_comm.rd  mpi_exception.rd  mpi_group.rd  mpi_keyval.rd  mpi_op.rd  mpi_request.rd  mpi_status.rd
examples/: Makefile.am  Makefile.in  allgather.rb  allreduce.rb  basic.rb  bcast.rb  gather.rb  hello.rb  irecv.rb  op.rb  red.rb  redhalt.rb  redsubmit.rb  reduce.rb  rpi.rb
src/: Makefile.am  Makefile.in  global.h  main.c  mpi.c  mpi_comm.c  mpi_comm.h  mpi_exception.c  mpi_exception.h  mpi_group.c  mpi_group.h  mpi_keyval.c  mpi_keyval.h  mpi_op.c  mpi_op.h  mpi_op_fns.c  mpi_request.c  mpi_request.h  mpi_status.c  mpi_status.h  ops.rb
src/.deps/: main.Po  mpi.Po  mpi_comm.Po  mpi_exception.Po  mpi_group.Po  mpi_keyval.Po  mpi_op.Po  mpi_request.Po  mpi_status.Po
